--- a/alertmanager.yaml
+++ b/alertmanager.yaml
@@ -12,5 +12,5 @@ receivers:
   -
     name: slack
     slack_configs:
-      - api_url: 'https://hooks.slack.com/services/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'
+      - api_url: '<slack api token>'
         channel: '#promtheusbot'
