--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,8 +1,11 @@
+
 global:
+
   scrape_interval: 5s
 
 scrape_configs:
   - job_name: 'prometheus'
+
     static_configs:
       - targets: ['localhost:9090']
   - job_name: 'node'
@@ -10,6 +13,7 @@ scrape_configs:
       - names: ['tasks.node-exporter']
         type: A
         port: 9100
+
   - job_name: 'cadvisor'
     dns_sd_configs:
       - names: ['tasks.cadvisor']
@@ -21,7 +25,13 @@ scrape_configs:
         type: A
         port: 4999
 
+  - job_name: 'cloudwatch-exporter'
+    honor_labels: true
+    scrape_interval: 1s
+    static_configs:
+     - targets: ['172.31.51.191:9106']
 rule_files:
+
   - 'error.rules'
 
 alerting:
